<resources>
    <string name="app_name">Credit_Viewer</string>
    <string name="check_your_bank_activities">Check your bank activities</string>
    <string name="ideas">Ideas</string>
    <string name="links">Links</string>
    <string name="add">Add</string>
    <string name="add">Add</string>
    <string name="check_your_bank_activities">Check your bank activities</string>
    <string name="banking" />
    <string name="check_yourbank_activities" />
    <string name="check_your_bank_activities">Check your bank activities</string>
    <string name="check_your_bank_activities">Check your bank activities</string>
    <string name="todo" />
    <string name="Todo">TODO</string>
    <string name="Todo">TODO</string>
    <string name="Todo">TODO</string>
    <string name="Todo">TODO</string>
</resources>
